# apicuron-client

./: .bumpversion.cfg  .flake8  CONTRIBUTING.rst  README.md  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/apicuron_client/: __init__.py  __main__.py  api.py  cli.py  version.py
tests/: __init__.py  test_version.py
